force-app/main/default/objects/Settlement__c/fields/Carrier__c.field-meta.xml
<CustomField>
    <fullName>Carrier__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Reference to Carrier account being settled</description>
    <label>Carrier</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Settlements</relationshipLabel>
    <relationshipName>Settlements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>