force-app/main/default/objects/Settlement__c/fields/Deductions__c.field-meta.xml
<CustomField>
    <fullName>Deductions__c</fullName>
    <description>Total deductions (claims, advances, etc.)</description>
    <label>Deductions</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>