force-app/main/default/objects/Settlement__c/fields/Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Gross_Amount__c</fullName>
    <description>Total gross earnings for carrier before deductions</description>
    <label>Gross Amount</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>