force-app/main/default/objects/Settlement__c/fields/Load_Count__c.field-meta.xml
<CustomField>
    <fullName>Load_Count__c</fullName>
    <description>Number of loads included in this settlement</description>
    <label>Load Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>