force-app/main/default/objects/Settlement__c/fields/Net_Payment__c.field-meta.xml
<CustomField>
    <fullName>Net_Payment__c</fullName>
    <description>Net payment to carrier (Gross - Deductions)</description>
    <label>Net Payment</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>