force-app/main/default/objects/Settlement__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <description>Payment method (ACH, Check, Wire, etc.)</description>
    <label>Payment Method</label>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>ACH</fullName><default>true</default><label>ACH</label></value>
            <value><fullName>Check</fullName><default>false</default><label>Check</label></value>
            <value><fullName>Wire</fullName><default>false</default><label>Wire</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
    <type>Picklist</type>
</CustomField>