force-app/main/default/objects/Settlement__c/fields/Settlement_Period_End__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Period_End__c</fullName>
    <description>End date of settlement period (Sunday)</description>
    <label>Settlement Period End</label>
    <type>Date</type>
</CustomField>