force-app/main/default/objects/Settlement__c/fields/Settlement_Period_Start__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Period_Start__c</fullName>
    <description>Start date of settlement period (Monday)</description>
    <label>Settlement Period Start</label>
    <type>Date</type>
</CustomField>