force-app/main/default/objects/Settlement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Settlement approval and payment status</description>
    <label>Status</label>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Pending</fullName><default>true</default><label>Pending</label></value>
            <value><fullName>Approved</fullName><default>false</default><label>Approved</label></value>
            <value><fullName>Payment_Queued</fullName><default>false</default><label>Payment Queued</label></value>
            <value><fullName>Paid</fullName><default>false</default><label>Paid</label></value>
            <value><fullName>Reversed</fullName><default>false</default><label>Reversed</label></value>
        </valueSetDefinition>
    </valueSet>
    <required>true</required>
    <type>Picklist</type>
</CustomField>